add users in swagger
